--- a/index.html
+++ b/index.html
@@ -1,8 +1,12 @@
 <html>
 <header>
-Oliver Broadrick
+  <style>
+    color: red;
+    fontsize: 20;
+  </style>
+  Oliver Broadrick
 </header>
 <p>
-My personal website. :)
+  My personal website. :)
 </p>
 </html>
