--- a/index.html
+++ b/index.html
@@ -1,9 +1,5 @@
 <html>
-<header>
-  <style>
-    Color: red;
-    fontsize: 20;
-  </style>
+<header style="color:red;">
   Oliver Broadrick
 </header>
 <p>
