--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
-<header style="color:red;">
+<h1 style="color:red;">
   Oliver Broadrick
-</header>
+</h1>
 <p>
   My personal website. :)
 </p>
