--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <h1 style="color:red;">
   Oliver Broadrick
 </h1>
-<p style="font-size:50;">
+<p style="font-size:50%;">
   My personal website. :)
 </p>
 </html>
