created css file and improved index

--- a/index.html
+++ b/index.html
@@ -1,8 +1,21 @@
 <html>
-<h1 style="color:red;">
-  Oliver Broadrick
-</h1>
-<p style="font-size:50%;">
-  My personal website. :)
-</p>
+  <head>
+    <title>Oliver Broadrick</title>
+    <link rel="stylesheet" type="text/css" href="main.css">
+  </head>
+  <body>
+    <header>
+      <nav>
+        <h1>Oliver Broadrick</h1>
+        <ul>
+          <li><a href="#">About</a></li>
+          <li><a href="#">Projects</a></li>
+          <li><a href="#">Contact</a></li>
+        </ul>
+      </nav>
+    </header>
+    <p>
+      This is my website where I show off my awesome skills.
+    </p>
+  </body>
 </html>
