updated html references to align with new file structure

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 
   <head>
     <title>Oliver Broadrick</title>
-    <link rel="stylesheet" type="text/css" href="../css/main.css">
+    <link rel="stylesheet" type="text/css" href="css/main.css">
     <meta http-equiv="refresh" content="100" >
   </head>
 
