--- a/contact.html
+++ b/contact.html
@@ -2,7 +2,7 @@
 
   <head>
     <title>Oliver Broadrick</title>
-    <link rel="stylesheet" type="text/css" href="../css/main.css">
+    <link rel="stylesheet" type="text/css" href="css/main.css">
   </head>
 
   <body>
