--- a/contact.html
+++ b/contact.html
@@ -26,7 +26,7 @@
 
     <ul class="mainContent">
       <li>Email: obroadrick@gwu.edu</li>
-      <li><a href="www.linkedin.com/in/oliverbroadrick000">LinkedIn</a></li>
+      <li><a href="https://www.linkedin.com/in/oliverbroadrick000/">LinkedIn</a></li>
       <li><a href="https://github.com/obroadrick">GitHub</a></li>
     </ul>
 
