foundation has been added bb

--- a/snake.html
+++ b/snake.html
@@ -17,7 +17,7 @@
   </header>
 
   <div id="home">
-    <h2>Oliver Broadrick is my name.</h2>
+    <h2>Oliver is yet to add snake. He is slow.</h2>
   </div>
 </body>
 </html>
