--- a/contact.html
+++ b/contact.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Oliver Broadrick</title>
+  <title>Oliver Broadrick Contact</title>
   <link rel="stylesheet" type="text/css" href="css/main.css">
   <script type="text/javascript" src="main.js"></script>
 </head>
@@ -17,7 +17,7 @@
   </header>
 
   <div id="home">
-    <h2>Oliver Broadrick is my name.</h2>
+    <h2>Oliver has not yet made a contact page. He stinks.</h2>
   </div>
 </body>
 </html>
