--- a/tetris.html
+++ b/tetris.html
@@ -17,7 +17,7 @@
   </header>
 
   <div id="home">
-    <h2>Oliver Broadrick is my name.</h2>
+    <h2>Oliver has not yet added Tetris. What a loser.</h2>
   </div>
 </body>
 </html>
