--- a/snake.html
+++ b/snake.html
@@ -6,6 +6,7 @@
   <script type="text/javascript" src="main.js"></script>
 </head>
 <body>
+
   <header>
       <nav>
         <ul>
@@ -16,8 +17,8 @@
       </nav>
   </header>
 
-  <div id="home">
-    <h2>Oliver is yet to add snake. He is slow.</h2>
-  </div>
+  <canvas id="snakeCanvas" width="400" height="400"></canvas>
+  <script src="snake.js"></script>
+
 </body>
 </html>
