improved nav and added contact page content

--- a/contact.html
+++ b/contact.html
@@ -9,6 +9,7 @@
   <header>
       <nav>
         <ul>
+          <li><a href="index.html">OLIVER</a></li>
           <li><a href="contact.html">CONTACT ME</a></li>
           <li><a href="tetris.html">TETRIS</a></li>
           <li><a href="snake.html">SNAKE</a></li>
@@ -16,8 +17,8 @@
       </nav>
   </header>
 
-  <div id="home">
-    <h2>Oliver has not yet made a contact page. He stinks.</h2>
+  <div id="contactinfo">
+    <h3>email: <a href="mailto: odbroadrick@gmail.com">odbroadrick@gmail.com</a><br><br>linkedin: <a href="https://www.linkedin.com/in/oliverbroadrick000/">Oliver Broadrick</a></h3>
   </div>
 </body>
 </html>
