--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <header>
       <nav>
         <ul>
+          <li><a href="index.html">OLIVER</a></li>
           <li><a href="contact.html">CONTACT ME</a></li>
           <li><a href="tetris.html">TETRIS</a></li>
           <li><a href="snake.html">SNAKE</a></li>
@@ -17,7 +18,8 @@
   </header>
 
   <div id="home">
-    <h2>Oliver Broadrick is my name.</h2>
+    <h2>Hi, I'm Oliver Broadrick.</h2>
+    <h3 id="notop">I made this website for fun.</h3>
   </div>
 </body>
 </html>
