--- a/snake.html
+++ b/snake.html
@@ -10,6 +10,7 @@
   <header>
       <nav>
         <ul>
+          <li><a href="index.html">OLIVER</a></li>
           <li><a href="contact.html">CONTACT ME</a></li>
           <li><a href="tetris.html">TETRIS</a></li>
           <li><a href="snake.html">SNAKE</a></li>
