--- a/tetris.html
+++ b/tetris.html
@@ -9,6 +9,7 @@
   <header>
       <nav>
         <ul>
+          <li><a href="index.html">OLIVER</a></li>
           <li><a href="contact.html">CONTACT ME</a></li>
           <li><a href="tetris.html">TETRIS</a></li>
           <li><a href="snake.html">SNAKE</a></li>
@@ -17,7 +18,7 @@
   </header>
 
   <div id="home">
-    <h2>Oliver has not yet added Tetris. What a loser.</h2>
+    <h2>Oliver has not yet added Tetris... he stinks.</h2>
   </div>
 </body>
 </html>
