added sorting woohoogit add selection.js sort.js sorting.html contact.html css/main.css index.html snake.html tetris.html  only selection sort right now

--- a/index.html
+++ b/index.html
@@ -3,7 +3,6 @@
 <head>
   <title>Oliver Broadrick</title>
   <link rel="stylesheet" type="text/css" href="css/main.css">
-  <script type="text/javascript" src="main.js"></script>
 </head>
 <body>
   <header>
@@ -13,6 +12,7 @@
           <li><a href="contact.html">CONTACT ME</a></li>
           <li><a href="tetris.html">TETRIS</a></li>
           <li><a href="snake.html">SNAKE</a></li>
+          <li><a href="sorting.html">SORTING</a></li>
         </ul>
       </nav>
   </header>
