--- a/contact.html
+++ b/contact.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Oliver Broadrick Contact</title>
+  <title>Oliver Broadrick - Contact</title>
   <link rel="stylesheet" type="text/css" href="css/main.css">
   <script type="text/javascript" src="main.js"></script>
 </head>
@@ -13,12 +13,13 @@
           <li><a href="contact.html">CONTACT ME</a></li>
           <li><a href="tetris.html">TETRIS</a></li>
           <li><a href="snake.html">SNAKE</a></li>
+          <li><a href="sorting.html">SORTING</a></li>
         </ul>
       </nav>
   </header>
 
   <div id="contactinfo">
-    <h3>email: <a href="mailto: odbroadrick@gmail.com">odbroadrick@gmail.com</a><br><br>linkedin: <a href="https://www.linkedin.com/in/oliverbroadrick000/">Oliver Broadrick</a></h3>
+    <h2>email: <a href="mailto: odbroadrick@gmail.com">odbroadrick@gmail.com</a><br><br>linkedin: <a href="https://www.linkedin.com/in/oliverbroadrick000/">my profile</a></h2>
   </div>
 </body>
 </html>
