--- a/snake.html
+++ b/snake.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Oliver Broadrick</title>
+  <title>Oliver Broadrick - Snake</title>
   <link rel="stylesheet" type="text/css" href="css/main.css">
   <script type="text/javascript" src="main.js"></script>
 </head>
@@ -14,6 +14,7 @@
           <li><a href="contact.html">CONTACT ME</a></li>
           <li><a href="tetris.html">TETRIS</a></li>
           <li><a href="snake.html">SNAKE</a></li>
+          <li><a href="sorting.html">SORTING</a></li>
         </ul>
       </nav>
   </header>
