--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
   <div id="home">
     <h2>Hi, I'm Oliver Broadrick.</h2>
-    <h3 id="notop">I made this website for fun.</h3>
+    <h3>I made this website for fun.</h3>
   </div>
 </body>
 </html>
