--- a/contact.html
+++ b/contact.html
@@ -18,8 +18,14 @@
       </nav>
   </header>
 
-  <div id="contactinfo">
-    <h2>email: <a href="mailto: odbroadrick@gmail.com">odbroadrick@gmail.com</a><br><br>linkedin: <a href="https://www.linkedin.com/in/oliverbroadrick000/">my profile</a></h2>
+  <div id="home">
+    <h2>
+    	email: 
+    	<a href="mailto: odbroadrick@gmail.com">odbroadrick@gmail.com</a>
+    	<br><br>
+    	linkedin: 
+    	<a href="https://www.linkedin.com/in/oliverbroadrick000/">my profile</a>
+    </h2>
   </div>
 </body>
 </html>
