added insertion sort

--- a/sorting.html
+++ b/sorting.html
@@ -32,8 +32,8 @@
       <select id="algorithm">
         <option value="selection">Selection Sort</option>
         <option value="bubble">Bubble Sort</option>
-        <!--<option value="quick">Quick Sort</option>
-        <option value="insertion">Insertion Sort</option>-->
+        <option value="insertion">Insertion Sort</option>
+        <!--<option value="quick">Quick Sort</option>-->
       </select>
     </div>
     <div class="sortingControlItem">
