redid directory structure

--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
       <nav>
         <ul>
           <li><a href="index.html">OLIVER</a></li>
-          <li><a href="contact.html">CONTACT ME</a></li>
-          <li><a href="tetris.html">TETRIS</a></li>
-          <li><a href="snake.html">SNAKE</a></li>
-          <li><a href="sorting.html">SORTING</a></li>
+          <li><a href="html/contact.html">CONTACT ME</a></li>
+          <li><a href="html/tetris.html">TETRIS</a></li>
+          <li><a href="html/snake.html">SNAKE</a></li>
+          <li><a href="html/sorting.html">SORTING</a></li>
         </ul>
       </nav>
   </header>
