--- a/html/contact.html
+++ b/html/contact.html
@@ -1,16 +1,15 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Oliver Broadrick - Snake</title>
+  <title>Oliver Broadrick - Contact</title>
   <link rel="stylesheet" type="text/css" href="css/main.css">
-  <script type="text/javascript" src="main.js"></script>
+  <script type="text/javascript" src="../js/main.js"></script>
 </head>
 <body>
-
   <header>
       <nav>
         <ul>
-          <li><a href="index.html">OLIVER</a></li>
+          <li><a href="../index.html">OLIVER</a></li>
           <li><a href="contact.html">CONTACT ME</a></li>
           <li><a href="tetris.html">TETRIS</a></li>
           <li><a href="snake.html">SNAKE</a></li>
@@ -19,8 +18,14 @@
       </nav>
   </header>
 
-  <canvas id="snakeCanvas" width="400" height="400"></canvas>
-  <script src="snake.js"></script>
-
+  <div id="home">
+    <h2>
+    	email: 
+    	<a href="mailto: odbroadrick@gmail.com">odbroadrick@gmail.com</a>
+    	<br><br>
+    	linkedin: 
+    	<a href="https://www.linkedin.com/in/oliverbroadrick000/">my profile</a>
+    </h2>
+  </div>
 </body>
 </html>
