--- a/html/snake.html
+++ b/html/snake.html
@@ -1,15 +1,16 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Oliver Broadrick - Tetris</title>
+  <title>Oliver Broadrick - Snake</title>
   <link rel="stylesheet" type="text/css" href="css/main.css">
-  <script type="text/javascript" src="main.js"></script>
+  <script type="text/javascript" src="../js/main.js"></script>
 </head>
 <body>
+
   <header>
       <nav>
         <ul>
-          <li><a href="index.html">OLIVER</a></li>
+          <li><a href="../index.html">OLIVER</a></li>
           <li><a href="contact.html">CONTACT ME</a></li>
           <li><a href="tetris.html">TETRIS</a></li>
           <li><a href="snake.html">SNAKE</a></li>
@@ -18,8 +19,8 @@
       </nav>
   </header>
 
-  <div id="home">
-    <h2>Oliver has not yet added Tetris... he stinks.</h2>
-  </div>
+  <canvas id="snakeCanvas" width="400" height="400"></canvas>
+  <script src="js/snake.js"></script>
+
 </body>
 </html>
