--- a/html/sorting.html
+++ b/html/sorting.html
@@ -3,13 +3,13 @@
 <head>
   <title>Oliver Broadrick - Sorting</title>
   <link rel="stylesheet" type="text/css" href="css/main.css">
-  <script type="text/javascript" src="main.js"></script>
+  <script type="text/javascript" src="../js/main.js"></script>
 </head>
 <body>
   <header>
       <nav>
         <ul>
-          <li><a href="index.html">OLIVER</a></li>
+          <li><a href="../index.html">OLIVER</a></li>
           <li><a href="contact.html">CONTACT ME</a></li>
           <li><a href="tetris.html">TETRIS</a></li>
           <li><a href="snake.html">SNAKE</a></li>
@@ -65,7 +65,7 @@
     </div>
   </div>
 
-  <script src="sort.js"></script>
+  <script src="../js/sort.js"></script>
 
 </body>
 </html>
