--- a/html/tetris.html
+++ b/html/tetris.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <title>Oliver Broadrick - Tetris</title>
-  <link rel="stylesheet" type="text/css" href="css/main.css">
+  <link rel="stylesheet" type="text/css" href="../css/main.css">
   <script type="text/javascript" src="../js/main.js"></script>
 </head>
 <body>
