added github to contact page

--- a/html/contact.html
+++ b/html/contact.html
@@ -23,8 +23,9 @@
     	email: 
     	<a href="mailto: odbroadrick@gmail.com">odbroadrick@gmail.com</a>
     	<br><br>
-    	linkedin: 
-    	<a href="https://www.linkedin.com/in/oliverbroadrick000/">my profile</a>
+    	<a href="https://www.linkedin.com/in/oliverbroadrick000/">linkedin</a>
+        <br><br>
+    	<a href="https://github.com/obroadrick">github</a>
     </h2>
   </div>
 </body>
