fixed js path for snake

--- a/html/snake.html
+++ b/html/snake.html
@@ -20,7 +20,7 @@
   </header>
 
   <canvas id="snakeCanvas" width="400" height="400"></canvas>
-  <script src="js/snake.js"></script>
+  <script src="../js/snake.js"></script>
 
 </body>
 </html>
