another attempt at redirecting from index.htl

--- a/index.html
+++ b/index.html
@@ -1,3 +1,13 @@
 <!DOCTYPE html>
-<?php require_once("src/index.php"); ?>
-potato
+<html>
+
+<head>
+    <meta http-equiv="Refresh" content="7; url=/src/index.php" />
+</head>
+
+<body>
+    <p>Please follow <a href="//www.w3docs.com/">this link</a>.</p>
+</body>
+
+</html>
+
