--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 </head>
 
 <body>
-    <p>Please follow <a href="//www.w3docs.com/">this link</a>.</p>
+    <p>Please follow <a href="/src/index.php">this link</a>.</p>
 </body>
 
 </html>
