maybe js will work

--- a/index.html
+++ b/index.html
@@ -2,7 +2,9 @@
 <html>
 
 <head>
-    <meta http-equiv="Refresh" content="0; url=/src/index.php" />
+    <script type="text/javascript">
+        window.location.href = "http://example.com"
+    </script>
 </head>
 
 <body>
