--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <script type="text/javascript">
-        window.location.href = "http://example.com"
+        window.location.href = "/src/index.php"
     </script>
 </head>
 
