--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 
 <head>
     <script type="text/javascript">
-        window.location.href = "/src/index.php"
+        window.location.href = "src/index.php"
     </script>
 </head>
 
 <body>
-    <p>Please follow <a href="/src/index.php">this link</a>.</p>
+    <p>Please follow <a href="src/index.php">this link</a>.</p>
 </body>
 
 </html>
