--- a/index.html
+++ b/index.html
@@ -2,9 +2,7 @@
 <html>
 
 <head>
-    <script type="text/javascript">
-        window.location.href = "src/index.php"
-    </script>
+    <meta http-equiv="refresh" content="0; url=http://oliverbroadrick.com/index.php" />
 </head>
 
 <body>
