--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <meta http-equiv="refresh" content="0; url=http://oliverbroadrick.com/index.php" />
+    <meta http-equiv="refresh" content="0; href=src/index.php" />
 </head>
 
 <body>
