--- a/index.html
+++ b/index.html
@@ -1,9 +1,8 @@
 <!DOCTYPE html>
 <html>
-
-<head>
-    <meta http-equiv="refresh" content="0; href=src/index.php" />
-</head>
+<?php
+    header('Location: index.php');
+?>
 
 <body>
     <p>Please follow <a href="src/index.php">this link</a>.</p>
