--- a/html/snake.html
+++ b/html/snake.html
@@ -1,25 +1,36 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Oliver Broadrick - Snake</title>
-  <link rel="stylesheet" type="text/css" href="../css/main.css">
-  <script type="text/javascript" src="../js/main.js"></script>
+    <title>Oliver Broadrick - Snake</title>
+    <script type="text/javascript" src="../js/main.js"></script>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
 </head>
 <body>
 
-  <header>
-      <nav>
-        <ul>
-          <li><a href="../index.html">OLIVER</a></li>
-          <li><a href="contact.html">CONTACT ME</a></li>
-          <li><a href="snake.html">SNAKE</a></li>
-          <li><a href="sorting.html">SORTING</a></li>
-        </ul>
-      </nav>
-  </header>
+<nav class="navbar navbar-dark bg-dark">
+    <div class="container-fluid">
+        <div class="col-xs-0 col-md-2"></div>
+        <div class="col-xs-12 col-md-8">
+            <div class="navbar-header">
+                <a class="navbar-brand" href="../index.html">Oliver Broadrick</a>
+            </div>
+        </div>
+        <div class="col-xs-0 col-md-2"></div>
+    </div>
+</nav>
 
-  <canvas id="snakeCanvas" width="400" height="400"></canvas>
-  <script src="../js/snake.js"></script>
+<div class="container">
+    <div style="text-align: center; padding-top: 50px;">
+      <canvas id="snakeCanvas" width="400" height="400" style="border: 1px solid black; float:center;"></canvas>
+    </div>
+</div>
+
+<script src="../js/snake.js"></script>
+
+<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRk
+ssorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
 
 </body>
 </html>
