--- a/index.html
+++ b/index.html
@@ -3,27 +3,93 @@
 <html>
 
 <head>
-  <title>Oliver Broadrick</title>
-  <link rel="stylesheet" type="text/css" href="css/main.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="author" content="Oliver Broadrick">
+    <title>Oliver Broadrick</title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
+    <script src="https://kit.fontawesome.com/063cf6042c.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
 
-    <header>
-        <nav>
-            <ul>
-                <li><a href="index.html">OLIVER</a></li>
-                <li><a href="html/contact.html">CONTACT ME</a></li>
-                <li><a href="html/snake.html">SNAKE</a></li>
-                <li><a href="html/sorting.html">SORTING</a></li>
-            </ul>
-        </nav>
-    </header>
-
-    <div id="home">
-        <h2>Hi, I'm Oliver Broadrick. </h2>
-        <h3>I made this website for fun.</h3>
+<nav class="navbar navbar-dark bg-dark">
+    <div class="container-fluid">
+        <div class="col-xs-0 col-md-2"></div>
+        <div class="col-xs-12 col-md-8">
+            <div class="navbar-header">
+                <a class="navbar-brand" href="index.html">Oliver Broadrick</a>
+            </div>
+        </div>
+        <div class="col-xs-0 col-md-2"></div>
     </div>
+</nav>
+
+<div class="container">
+    <div class="col-xs-0 col-md-2"></div>
+    <div class="col-xs-12 col-md-10">
+        <p><img src="./imgs/headshot.png" width="250px" class="float-right"></p>
+        <p>
+            I am a Student-Athlete at 
+            <a href="https://www.seas.gwu.edu/">George Washington University</a>. 
+            I study math and computer science, and I'm on the 
+            <a href="https://gwsports.com/sports/mens-rowing">Men's Rowing team</a>.
+            See <a href="https://www.change.org/p/ncaa-protect-collegiate-rowing-ira-ncaa-relationship?utm_content=cl_sharecopy_23960295_en-US%3A5&recruiter=895370467&utm_source=share_petition&utm_medium=copylink&utm_campaign=share_petition">
+            our petition</a> to save collegiate rowing.
+        </p>
+        <p>
+            Since Janurary 2020, I've had the opportunity to help with 
+            <a href="https://github.com/gwexploratoryaudits/r2b2">research</a> 
+            on risk-limiting audits under 
+            <a href="https://www2.seas.gwu.edu/~poorvi/">Professor Poorvi Vora</a>
+            . Most of 
+            <a href="https://github.com/obroadrick/stratified_athena">my work</a> 
+            has been on stratified audits.
+        </p>
+        <p>
+            I also love helping folks learn.
+            I've been a Learning Assistant in 
+            <a href="https://csci1311-s20.adamaviv.com/">Discrete Structures I</a>
+            (Spring '20) and 
+            <a href="https://www2.seas.gwu.edu/~poorvi/Classes/CS2312/Fall_2020_Syllabus.pdf">Discrete Structures II</a> (Fall '20),
+            and I tutor college students for the 
+            <a href="https://gwsports.com/sports/2018/8/15/tutor-request">GW Athletics Department</a>
+            and high school students for a 
+            <a href="https://www.tungstenprep.com/">local company.</a>
+        </p>
+        <hr>
+        <p>
+            And of course, no CS degree is complete without a useless program or two:
+            <ul>
+                <li><a href="html/snake.html">Snake</a></li>
+                <li><a href="html/sorting.html">Sorting</a></li>
+                <!--<li><a href="">Tetris</a></li>-->
+                <!--<li><a href="">Sudoku Solver</a></li>-->
+            </ul>
+        </p>
+        <hr>
+        <div>
+            <a class="btn btn-secondary" href="mailto: odbroadrick@gmail.com">
+                <i class="fas fa-envelope"></i>
+                Email
+            </a>
+            <a class="btn btn-secondary" href="https://www.linkedin.com/in/oliverbroadrick000/">
+                <span class="fa fa-linkedin"></span>
+                LinkedIn
+            </a>
+            <a class="btn btn-secondary" href="https://github.com/obroadrick">
+                <span class="fa fa-github"></span>
+                GitHub
+            </a>
+        </div>
+    </div>
+    <div class="col-xs-0 col-md-2"></div>
+</div>
+
+<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRk
+ssorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
+
 </body>
 
 </html>
