--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 <div class="container">
     <div class="col-xs-0 col-md-2"></div>
     <div class="col-xs-12 col-md-10">
-        <p><img src="./imgs/headshot.png" width="250px" class="float-right"></p>
+        <p><img src="./imgs/headshot.png" width="250px" class="float-right p-2"></p>
         <p>
             I am a Student-Athlete at 
             <a href="https://www.seas.gwu.edu/">George Washington University</a>. 
