added muted footer for update month

--- a/index.html
+++ b/index.html
@@ -80,6 +80,10 @@
                 GitHub
             </a>
         </div>
+        <hr>
+        <p class="small text-muted">
+        Updated September 2020
+        </p>
     </div>
     <div class="col-xs-0 col-md-2"></div>
 </div>
