--- a/index.html
+++ b/index.html
@@ -40,8 +40,8 @@
             Since Janurary 2020, I've had the opportunity to help with 
             <a href="https://github.com/gwexploratoryaudits/r2b2">research</a> 
             on risk-limiting audits under 
-            <a href="https://www2.seas.gwu.edu/~poorvi/">Professor Poorvi Vora</a>
-            . Most of 
+            <a href="https://www2.seas.gwu.edu/~poorvi/">Professor Poorvi Vora</a>. 
+            Most of 
             <a href="https://github.com/obroadrick/stratified_athena">my work</a> 
             has been on stratified audits.
         </p>
