padding to top of sorting canvas

--- a/html/sorting.html
+++ b/html/sorting.html
@@ -19,7 +19,7 @@
     </div>
 </nav>
 
-<div class="container" style="text-align: center;">
+<div class="container" style="text-align: center; padding-top: 50px;">
   <canvas id="sortingCanvas" width="800" height="300" style=""></canvas>
 
   <div id="sortingControls">
