improve keyboard msg on snake

--- a/html/snake.html
+++ b/html/snake.html
@@ -20,8 +20,8 @@
 </nav>
 
 <div class="container">
-    <p class="text-muted">You need a keyboard to play (arrow keys)</p>
-    <div style="text-align: center; padding-top: 50px;">
+    <span class="text-muted" style="padding-top: 25px;">You need a keyboard to play (arrow keys)</span>
+    <div style="text-align: center; padding-top: 25px;">
       <canvas id="snakeCanvas" width="400" height="400" style="border: 1px solid black; float:center;"></canvas>
     </div>
 </div>
