--- a/html/snake.html
+++ b/html/snake.html
@@ -4,34 +4,32 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="author" content="Oliver Broadrick">
     <title>Oliver Broadrick - Snake</title>
+    <link href="./imgs/gw.jpg" rel="icon">
     <script type="text/javascript" src="../js/main.js"></script>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
 </head>
 <body>
 
 <nav class="navbar navbar-dark bg-dark">
-    <div class="container-fluid">
-        <div class="col-xs-0 col-md-2"></div>
-        <div class="col-xs-12 col-md-8">
-            <div class="navbar-header">
-                <a class="navbar-brand" href="../index.html">Oliver Broadrick</a>
-            </div>
+    <div class="col-xs-0 col-md-3"></div>
+    <div class="col-xs-12 col-md-6">
+        <div class="navbar-header">
+            <a class="navbar-brand" href="../index.html">Oliver Broadrick</a>
         </div>
-        <div class="col-xs-0 col-md-2"></div>
     </div>
+    <div class="col-xs-0 col-md-3"></div>
 </nav>
 
-<div class="container">
-    <span class="text-muted" style="padding-top: 25px;">You need a keyboard to play (arrow keys)</span>
-    <div style="text-align: center; padding-top: 25px;">
-      <canvas id="snakeCanvas" width="400" height="400" style="border: 1px solid black; float:center;"></canvas>
+<div class="row justify-content-center">
+    <div class="col-xs-12 col-md-6 text-center">
+        <p class="text-muted">Keyboard needed (arrow keys)</p>
+        <canvas id="snakeCanvas" width="400" height="400" style="border: 1px solid black"></canvas>
     </div>
 </div>
 
 <script src="../js/snake.js"></script>
 
-<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRk
-ssorigin="anonymous"></script>
+<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkssorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
 
