--- a/html/sorting.html
+++ b/html/sorting.html
@@ -4,25 +4,24 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="author" content="Oliver Broadrick">
     <title>Oliver Broadrick - Sorting</title>
+    <link href="./imgs/gw.jpg" rel="icon">
     <script type="text/javascript" src="../js/main.js"></script>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
 </head>
 <body>
 
 <nav class="navbar navbar-dark bg-dark">
-    <div class="container-fluid">
-        <div class="col-xs-0 col-md-2"></div>
-        <div class="col-xs-12 col-md-8">
-            <div class="navbar-header">
-                <a class="navbar-brand" href="../index.html">Oliver Broadrick</a>
-            </div>
+    <div class="col-xs-0 col-md-3"></div>
+    <div class="col-xs-12 col-md-6">
+        <div class="navbar-header">
+            <a class="navbar-brand" href="../index.html">Oliver Broadrick</a>
         </div>
-        <div class="col-xs-0 col-md-2"></div>
     </div>
+    <div class="col-xs-0 col-md-3"></div>
 </nav>
 
 <div class="container" style="text-align: center; padding-top: 50px;">
-<div class="col-xs-0 col-md-2"></div>
+<div class="row justify-content-center">
 <div class="col-xs-12 col-md-8">
     <div class="container">
       <canvas id="sortingCanvas" width="" height="" style="width: 100%;"></canvas>
@@ -73,7 +72,7 @@
 </div>
     </div>
 </div>
-<div class="col-xs-0 col-md-2"></div>
+</div>
 <script src="../js/sort.js"></script>
 
 <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRk
