--- a/index.html
+++ b/index.html
@@ -14,20 +14,17 @@
 <body>
 
 <nav class="navbar navbar-dark bg-dark">
-    <div class="container-fluid">
-        <div class="col-xs-0 col-md-2"></div>
-        <div class="col-xs-12 col-md-8">
-            <div class="navbar-header">
-                <a class="navbar-brand" href="index.html">Oliver Broadrick</a>
-            </div>
+    <div class="col-xs-0 col-md-3"></div>
+    <div class="col-xs-12 col-md-6">
+        <div class="navbar-header">
+            <a class="navbar-brand" href="../index.html">Oliver Broadrick</a>
         </div>
-        <div class="col-xs-0 col-md-2"></div>
     </div>
+    <div class="col-xs-0 col-md-3"></div>
 </nav>
 
-<div class="container">
-    <div class="col-xs-0 col-md-2"></div>
-    <div class="col-xs-12 col-md-10">
+<div class="row justify-content-center">
+    <div class="col-xs-12 col-md-6">
         <p><img src="./imgs/headshot.png" width="250px" class="float-md-right p-2"></p>
         <p>
             I am a Student-Athlete at 
@@ -88,7 +85,6 @@
         Updated September 2020
         </p>
     </div>
-    <div class="col-xs-0 col-md-2"></div>
 </div>
 
 <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRk
