--- a/html/snake.html
+++ b/html/snake.html
@@ -20,10 +20,12 @@
     <div class="col-xs-0 col-md-3"></div>
 </nav>
 
-<div class="row justify-content-center">
-    <div class="col-xs-12 col-md-6 text-center">
-        <p class="text-muted">Keyboard needed (arrow keys)</p>
-        <canvas id="snakeCanvas" width="400" height="400" style="border: 1px solid black"></canvas>
+<div class="container-fluid">
+    <div class="row justify-content-center">
+        <div class="col-xs-12 col-md-6 text-center">
+            <p class="text-muted">Keyboard needed (arrow keys)</p>
+            <canvas id="snakeCanvas" width="400" height="400" style="border: 1px solid black"></canvas>
+        </div>
     </div>
 </div>
 
