--- a/html/sorting.html
+++ b/html/sorting.html
@@ -20,15 +20,15 @@
     <div class="col-xs-0 col-md-3"></div>
 </nav>
 
-<div class="container" style="text-align: center; padding-top: 50px;">
+<div class="container-fluid">
 <div class="row justify-content-center">
-<div class="col-xs-12 col-md-8">
+<div class="col-xs-12 col-md-6">
     <div class="container">
       <canvas id="sortingCanvas" width="" height="" style="width: 100%;"></canvas>
     </div>
 
-    <div class="container">
-  <div id="form">
+    <div class="container" style="text-center">
+  <div id="form" class="text-center">
     <div class="form-group">
       <input id="btn btn-primary" value="Sort" type="button" onclick="sort()">
     </div>
