--- a/index.html
+++ b/index.html
@@ -23,67 +23,69 @@
     <div class="col-xs-0 col-md-3"></div>
 </nav>
 
-<div class="row justify-content-center">
-    <div class="col-xs-12 col-md-6">
-        <p><img src="./imgs/headshot.png" width="250px" class="float-md-right p-2"></p>
-        <p>
-            I am a Student-Athlete at 
-            <a href="https://www.seas.gwu.edu/">George Washington University</a>. 
-            I study math and computer science, and I'm on the 
-            <a href="https://gwsports.com/sports/mens-rowing">Men's Rowing team</a>.
-            See <a href="https://www.change.org/p/ncaa-protect-collegiate-rowing-ira-ncaa-relationship?utm_content=cl_sharecopy_23960295_en-US%3A5&recruiter=895370467&utm_source=share_petition&utm_medium=copylink&utm_campaign=share_petition">
-            our petition</a> to save collegiate rowing.
-        </p>
-        <p>
-            Since Janurary 2020, I've had the opportunity to help with 
-            <a href="https://github.com/gwexploratoryaudits/r2b2">research</a> 
-            on risk-limiting audits under 
-            <a href="https://www2.seas.gwu.edu/~poorvi/">Professor Poorvi Vora</a>. 
-            Most of 
-            <a href="https://github.com/obroadrick/stratified_athena">my work</a> 
-            has been on stratified audits.
-        </p>
-        <p>
-            I also love helping folks learn.
-            I've been a Learning Assistant in 
-            <a href="https://csci1311-s20.adamaviv.com/">Discrete Structures I</a>
-            (Spring '20) and 
-            <a href="https://www2.seas.gwu.edu/~poorvi/Classes/CS2312/Fall_2020_Syllabus.pdf">Discrete Structures II</a> (Fall '20),
-            and I tutor college students for the 
-            <a href="https://gwsports.com/sports/2018/8/15/tutor-request">GW Athletics Department</a>
-            and high school students for a 
-            <a href="https://www.tungstenprep.com/">local company.</a>
-            If you're here for my tutoring, please fill out
-            <a href="https://forms.gle/BVx19VLR3wB9LMr96">this form.</a>
-        </p>
-        <p>
-            And of course, no CS degree is complete without a useless program or two:
-            <ul>
-                <li><a href="html/snake.html">Snake</a></li>
-                <li><a href="html/sorting.html">Sorting</a></li>
-                <!--<li><a href="">Tetris</a></li>-->
-                <!--<li><a href="">Sudoku Solver</a></li>-->
-            </ul>
-        </p>
-        <hr>
-        <div>
-            <a class="btn btn-secondary" href="mailto: odbroadrick@gmail.com">
-                <i class="fas fa-envelope"></i>
-                Email
-            </a>
-            <a class="btn btn-secondary" href="https://www.linkedin.com/in/oliverbroadrick000/">
-                <span class="fa fa-linkedin"></span>
-                LinkedIn
-            </a>
-            <a class="btn btn-secondary" href="https://github.com/obroadrick">
-                <span class="fa fa-github"></span>
-                GitHub
-            </a>
+<div class="container-fluid">
+    <div class="row justify-content-center">
+        <div class="col-xs-12 col-md-6">
+            <p><img src="./imgs/headshot.png" width="250px" class="float-md-right p-2"></p>
+            <p>
+                I am a Student-Athlete at 
+                <a href="https://www.seas.gwu.edu/">George Washington University</a>. 
+                I study math and computer science, and I'm on the 
+                <a href="https://gwsports.com/sports/mens-rowing">Men's Rowing team</a>.
+                See <a href="https://www.change.org/p/ncaa-protect-collegiate-rowing-ira-ncaa-relationship?utm_content=cl_sharecopy_23960295_en-US%3A5&recruiter=895370467&utm_source=share_petition&utm_medium=copylink&utm_campaign=share_petition">
+                our petition</a> to save collegiate rowing.
+            </p>
+            <p>
+                Since Janurary 2020, I've had the opportunity to help with 
+                <a href="https://github.com/gwexploratoryaudits/r2b2">research</a> 
+                on risk-limiting audits under 
+                <a href="https://www2.seas.gwu.edu/~poorvi/">Professor Poorvi Vora</a>. 
+                Most of 
+                <a href="https://github.com/obroadrick/stratified_athena">my work</a> 
+                has been on stratified audits.
+            </p>
+            <p>
+                I also love helping folks learn.
+                I've been a Learning Assistant in 
+                <a href="https://csci1311-s20.adamaviv.com/">Discrete Structures I</a>
+                (Spring '20) and 
+                <a href="https://www2.seas.gwu.edu/~poorvi/Classes/CS2312/Fall_2020_Syllabus.pdf">Discrete Structures II</a> (Fall '20),
+                and I tutor college students for the 
+                <a href="https://gwsports.com/sports/2018/8/15/tutor-request">GW Athletics Department</a>
+                and high school students for a 
+                <a href="https://www.tungstenprep.com/">local company.</a>
+                If you're here for my tutoring, please fill out
+                <a href="https://forms.gle/BVx19VLR3wB9LMr96">this form.</a>
+            </p>
+            <p>
+                And of course, no CS degree is complete without a useless program or two:
+                <ul>
+                    <li><a href="html/snake.html">Snake</a></li>
+                    <li><a href="html/sorting.html">Sorting</a></li>
+                    <!--<li><a href="">Tetris</a></li>-->
+                    <!--<li><a href="">Sudoku Solver</a></li>-->
+                </ul>
+            </p>
+            <hr>
+            <div>
+                <a class="btn btn-secondary" href="mailto: odbroadrick@gmail.com">
+                    <i class="fas fa-envelope"></i>
+                    Email
+                </a>
+                <a class="btn btn-secondary" href="https://www.linkedin.com/in/oliverbroadrick000/">
+                    <span class="fa fa-linkedin"></span>
+                    LinkedIn
+                </a>
+                <a class="btn btn-secondary" href="https://github.com/obroadrick">
+                    <span class="fa fa-github"></span>
+                    GitHub
+                </a>
+            </div>
+            <hr>
+            <p class="small text-muted">
+            Updated September 2020
+            </p>
         </div>
-        <hr>
-        <p class="small text-muted">
-        Updated September 2020
-        </p>
     </div>
 </div>
 
