--- a/html/snake.html
+++ b/html/snake.html
@@ -4,7 +4,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="author" content="Oliver Broadrick">
     <title>Oliver Broadrick - Snake</title>
-    <link href="./imgs/gw.jpg" rel="icon">
+    <link href="../imgs/gw.jpg" rel="icon">
     <script type="text/javascript" src="../js/main.js"></script>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
 </head>
@@ -23,7 +23,7 @@
 <div class="container-fluid">
     <div class="row justify-content-center">
         <div class="col-xs-12 col-md-6 text-center">
-            <p class="text-muted">Keyboard needed (arrow keys)</p>
+            <p class="text-muted" style="padding-top:16px">Keyboard needed (arrow keys)</p>
             <canvas id="snakeCanvas" width="400" height="400" style="border: 1px solid black"></canvas>
         </div>
     </div>
