--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                 <a href="https://forms.gle/BVx19VLR3wB9LMr96">this form.</a>
             </p>
             <p>
-                And of course, no CS degree is complete without a useless program or two:
+                Here are some links to mini projects I use for procrastination.
                 <ul>
                     <li><a href="html/snake.html">Snake</a></li>
                     <li><a href="html/sorting.html">Sorting</a></li>
