--- a/index.html
+++ b/index.html
@@ -28,6 +28,9 @@
         <div class="col-xs-12 col-sm-8 col-md-6">
             <p><img src="./imgs/headshot.png" width="250px" class="float-md-right p-2"></p>
             <p>
+            <a href="https://docs.google.com/document/d/1ThKqoHU9WKs22I4O7inRUkFH1ZY-47Tyz4L3l6OpwcE/edit?usp=sharing">Resume</a>
+            </p>
+            <p>
                 I am a Student-Athlete at 
                 <a href="https://www.seas.gwu.edu/">George Washington University</a>. 
                 I study math and computer science, and I'm on the 
