--- a/index.html
+++ b/index.html
@@ -39,13 +39,14 @@
                 our petition</a> to save collegiate rowing.
             </p>
             <p>
-                Since Janurary 2020, I've had the opportunity to help with 
-                <a href="https://github.com/gwexploratoryaudits/r2b2">research</a> 
-                on risk-limiting audits under 
-                <a href="https://www2.seas.gwu.edu/~poorvi/">Professor Poorvi Vora</a>. 
-                Most of 
-                <a href="https://github.com/obroadrick/stratified_athena">my work</a> 
-                has been on stratified audits.
+                Since Janurary 2020, I've had the opportunity to help with election security research
+                on risk-limiting audits that use random samples to provide rigorous statistical error bounds on validity of election results.
+                I've worked in a team led by 
+                <a href="https://www2.seas.gwu.edu/~poorvi/">Professor Poorvi Vora</a>,
+                contributing to our 
+                <a href="https://github.com/gwexploratoryaudits/r2b2">open source election software</a>,
+                and also independently explore a specific class of audit,
+                <a href="https://github.com/obroadrick/stratified_athena">stratified audits</a>.
             </p>
             <p>
                 I also love helping folks learn.
