--- a/index.html
+++ b/index.html
@@ -40,12 +40,12 @@
             </p>
             <p>
                 Since Janurary 2020, I've had the opportunity to help with election security research
-                on risk-limiting audits that use random samples to provide rigorous statistical error bounds on validity of election results.
-                I've worked in a team led by 
+                on risk-limiting audits that provide rigorous statistical error bounds to validate election results.
+                I've worked on a team led by 
                 <a href="https://www2.seas.gwu.edu/~poorvi/">Professor Poorvi Vora</a>,
                 contributing to our 
-                <a href="https://github.com/gwexploratoryaudits/r2b2">open source election software</a>,
-                and also independently explore a specific class of audit,
+                <a href="https://github.com/gwexploratoryaudits/r2b2">open source audit software</a>,
+                and I've also independently explored a specific class of audit,
                 <a href="https://github.com/obroadrick/stratified_athena">stratified audits</a>.
             </p>
             <p>
