move resume link

--- a/index.html
+++ b/index.html
@@ -28,9 +28,6 @@
         <div class="col-xs-12 col-sm-8 col-md-6">
             <p><img src="./imgs/headshot.png" width="250px" class="float-md-right p-2"></p>
             <p>
-            <a href="https://docs.google.com/document/d/1ThKqoHU9WKs22I4O7inRUkFH1ZY-47Tyz4L3l6OpwcE/edit?usp=sharing">Resume</a>
-            </p>
-            <p>
                 I am a Student-Athlete at 
                 <a href="https://www.seas.gwu.edu/">George Washington University</a>. 
                 I study math and computer science, and I'm on the 
@@ -60,15 +57,14 @@
                 If you're here for my tutoring, please fill out
                 <a href="https://forms.gle/BVx19VLR3wB9LMr96">this form.</a>
             </p>
-            <p>
+<!--            <p>
                 Here are some links to mini projects I use for procrastination.
                 <ul>
                     <li><a href="html/snake.html">Snake</a></li>
                     <li><a href="html/sorting.html">Sorting</a></li>
-                    <!--<li><a href="">Tetris</a></li>-->
-                    <!--<li><a href="">Sudoku Solver</a></li>-->
                 </ul>
             </p>
+-->
             <hr>
             <div>
                 <a class="btn btn-secondary" href="mailto: odbroadrick@gmail.com">
@@ -82,6 +78,10 @@
                 <a class="btn btn-secondary" href="https://github.com/obroadrick">
                     <span class="fa fa-github"></span>
                     GitHub
+                </a>
+                <a class="btn btn-secondary" href="https://docs.google.com/document/d/1ThKqoHU9WKs22I4O7inRUkFH1ZY-47Tyz4L3l6OpwcE/edit?usp=sharing">
+                <span class="fa fa-file"></span>
+                Resume
                 </a>
             </div>
             <hr>
