--- a/index.html
+++ b/index.html
@@ -32,26 +32,24 @@
                 <a href="https://www.seas.gwu.edu/">George Washington University</a>. 
                 I study math and computer science, and I'm on the 
                 <a href="https://gwsports.com/sports/mens-rowing">Men's Rowing team</a>.
-                See <a href="https://www.change.org/p/ncaa-protect-collegiate-rowing-ira-ncaa-relationship?utm_content=cl_sharecopy_23960295_en-US%3A5&recruiter=895370467&utm_source=share_petition&utm_medium=copylink&utm_campaign=share_petition">
-                our petition</a> to save collegiate rowing.
             </p>
             <p>
                 Since Janurary 2020, I've had the opportunity to help with election security research
                 on risk-limiting audits that provide rigorous statistical error bounds to validate election results.
-                I've worked on a team led by 
+                I work on a team led by 
                 <a href="https://www2.seas.gwu.edu/~poorvi/">Professor Poorvi Vora</a>,
                 contributing to our 
-                <a href="https://github.com/gwexploratoryaudits/r2b2">open source audit software</a>,
-                and I've also independently explored a specific class of audit,
-                <a href="https://github.com/obroadrick/stratified_athena">stratified audits</a>.
+                <a href="https://github.com/gwexploratoryaudits/r2b2">open source audit software</a>
+                and developing a novel mathematical approach to
+                <a href="https://github.com/obroadrick/new_stratified">stratified audits</a>.
             </p>
             <p>
                 I also love helping folks learn.
                 I've been a Learning Assistant in 
-                <a href="https://csci1311-s20.adamaviv.com/">Discrete Structures I</a>
-                (Spring '20) and 
+                <a href="https://csci1311-s20.adamaviv.com/">Discrete Structures I</a> (Spring '20), 
                 <a href="https://www2.seas.gwu.edu/~poorvi/Classes/CS2312/Fall_2020_Syllabus.pdf">Discrete Structures II</a> (Fall '20),
-                and I tutor college students for the 
+                and <a href="https://gw-cs3313-2021.github.io/">Foundations of Computing</a> (Spring '21).
+                I tutor college students for the 
                 <a href="https://gwsports.com/sports/2018/8/15/tutor-request">GW Athletics Department</a>
                 and high school students for a 
                 <a href="https://www.tungstenprep.com/">local company.</a>
@@ -87,7 +85,7 @@
             </div>
             <hr>
             <p class="small text-muted">
-            Updated September 2020
+            Updated January 2021
             </p>
         </div>
     </div>
