--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
                     <span class="fa fa-github"></span>
                     GitHub
                 </a>
-                <a class="btn btn-secondary" href="https://docs.google.com/document/d/1ThKqoHU9WKs22I4O7inRUkFH1ZY-47Tyz4L3l6OpwcE/edit?usp=sharing">
+                <a class="btn btn-secondary" href="https://docs.google.com/document/d/e/2PACX-1vTwQtm-fqNLd75BZ9B0MANrkH7fYkZtrAbTUMc2Ze5T8bbsieInedNWvZgOx7TVAKfvazOTH1R59JVB/pub">
                 <span class="fa fa-file"></span>
                 Resume
                 </a>
