--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 <div class="container-fluid">
     <div class="row justify-content-center">
         <div class="col-xs-12 col-sm-8 col-md-6">
-            <p><img src="./imgs/headshot.png" width="250px" class="float-md-right p-2"></p>
+            <p><img src="./imgs/headshot.jpg" width="250px" class="float-md-right p-2"></p>
             <p>
                 I am a Student-Athlete at 
                 <a href="https://www.seas.gwu.edu/">George Washington University</a>. 
