--- a/index.html
+++ b/index.html
@@ -85,6 +85,8 @@
             </div>
             <hr>
             <p class="small text-muted">
+            <a href="html/snake.html">Snake</a>
+            <a href="html/sorting.html">Sorting</a>
             Updated January 2021
             </p>
         </div>
