--- a/html/snake.html
+++ b/html/snake.html
@@ -23,7 +23,7 @@
 <div class="container-fluid">
     <div class="row justify-content-center">
         <div class="col-xs-12 col-md-6 text-center">
-            <p class="text-muted" style="padding-top:16px">Keyboard needed (arrow keys)</p>
+            <p class="text-muted" style="padding-top:16px">(Use arrow keys)</p>
             <canvas id="snakeCanvas" width="400" height="400" style="border: 1px solid black"></canvas>
         </div>
     </div>
