--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
             <p>
                 Human trafficking cases often have images from hotel rooms
                 as evidence.
-                A group led by <a href="">Professor Robert Pless</a>
+                A group led by <a href="https://www2.seas.gwu.edu/~pless/">Professor Robert Pless</a>
                 has compiled a database of thousands of hotel room images
                 and the tool Traffickcam that can be used to 
                 identify the chain and location of the hotel in a query image. 
