--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="author" content="Oliver Broadrick">
-    <meta http-equiv="refresh" content="5">
+    <!--<meta http-equiv="refresh" content="5">-->
     <title>Oliver Broadrick</title>
     <link href="./imgs/gw.jpg" rel="icon">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
