minor rewordings/typos

--- a/index.html
+++ b/index.html
@@ -29,71 +29,67 @@
         <div class="col-xs-12 col-sm-8 col-md-6">
             <p><img src="./imgs/headshot.jpg" width="250px" class="float-md-right p-2"></p>
             <p>
-                I am an undergraduate student studying computer science 
+                I am a final-year undergraduate student studying computer science 
                 and math at 
                 <a href="https://www.seas.gwu.edu/">George Washington University</a>. 
                 I'm also a proud member of
                 <a href="https://www.gwmensrowing.com/">GW Men's Rowing</a>.
             </p>
             <h2>Research</h2>
-            <h5>Election Security - Statistical Audits</h5>
+            <h5>Election Security - Risk-Limiting Audits</h5>
             <p>
-                My first experience with academic research began early in
-                2020, working on statistical risk-limiting audits
-                which provide rigorous error bounds to validate election results.
-                I work on a team led by 
-                <a href="https://www2.seas.gwu.edu/~poorvi/">Professor Poorvi Vora</a>. I work on the theoretical parts of the problem and also
+                In 2020, I began working on statistical risk-limiting audits
+                which validate election results within rigorous error bounds.
+                I am part of a team led by 
+                <a href="https://www2.seas.gwu.edu/~poorvi/">Professor Poorvi Vora</a>, and I 
+                work on the theoretical parts of the problem and also
                 develop software in our
                 <a href="https://github.com/gwexploratoryaudits/r2b2">open source audit library</a>.
                 The theory consists of beautiful mathematical ideas to
-                accurately measure error such that fewer ballots 
-                need to be sampled.
-                The implementation requires thoughtful algorithmic design
-                to make computationally complex tasks achievable.
+                accurately measure risk such that smaller sample sizes are sufficient to meet stopping conditions.
+                The implementation requires interesting algorithmic design
+                to make computationally complex tasks feasible.
                 Manuscripts presenting novel audits and related results are 
                 currently being drafted. 
             </p>
-            <h5>Scheduling Neural Network Tasks</h5>
+            <h5>Scheduling Algorithm - Neural Network Tasks</h5>
             <p>
                 Given numerous real-time neural network tasks, meeting 
                 deadlines
                 necessitates a balancing of priority and precision to achieve
-                near optimal results. 
+                optimal results. 
                 I am working with 
-                <a href="">Professor Bhagi Narahari</a> to develop a
+                <a href="https://www2.seas.gwu.edu/~narahari/">Professor Bhagi Narahari</a> to develop a
                 scheduling algorithm that models such tasks as imprecise
                 computations.
                 We are designing the scheduling algorithm subject to new
                 user-in-the-loop real-time constraints, and we are 
-                implementing the algorithm to experimentally confirm
+                implementing the algorithm to experimentally support
                 theoretical guarantees. 
             </p>
-            <h5>Traffickcam</h5>
+            <h5>Computer Vision - Traffickcam</h5>
             <p>
                 Human trafficking cases often have images from hotel rooms
                 as evidence.
                 A group led by <a href="https://www2.seas.gwu.edu/~pless/">Professor Robert Pless</a>
-                has compiled a database of thousands of hotel room images
-                and the tool Traffickcam that can be used to 
-                identify the chain and location of the hotel in a query image. 
+                has already compiled a database of millions of hotel room images
+                and developed the tool Traffickcam that can be used to 
+                match query images hotel chains and locations.
                 The National Center for Missing
-                and Exploited Children (NCMEC) uses Traffickcam, but 
-                there is room for improvement. The current matching approach
-                reduces the query image to a low resolution for use as input
-                in a neural network.
+                and Exploited Children (NCMEC) uses Traffickcam as it is, but 
+                there is room for improvement. The current matching approach essentially
+                reduces the resolution of the query image for use as input to a neural network.
                 This ignores higher resolution details in the image that
                 could be identifying features for a particular room.
                 I am working on a new search capability that 
-                computes descriptors
-                of particularly useful points in the image 
-                and searches for similar such points in images in
-                the database.
+                computes descriptors of such key points in the image 
+                and searches for similar points in the database to find matches.
             </p>
             <h2>Teaching</h2>
             <p>
                 I love helping folks learn.
                 I am currently an Undergraduate Teaching Assistant
-                in <a href="">Discrete Structures II</a>, enjoying leading
+                in <a href="https://www2.seas.gwu.edu/~poorvi/Classes/CS2312/">Discrete Structures II</a>, enjoying leading
                 my own weekly lab section with over twenty students.
                 I've also been a Learning Assistant in 
                 <a href="https://csci1311-s20.adamaviv.com/">Discrete Structures I</a> (Spring '20), 
@@ -108,14 +104,6 @@
                 If you're here for my tutoring, please fill out
                 <a href="https://forms.gle/BVx19VLR3wB9LMr96">this form.</a>
             </p>
-<!--            <p>
-                Here are some links to mini projects I use for procrastination.
-                <ul>
-                    <li><a href="html/snake.html">Snake</a></li>
-                    <li><a href="html/sorting.html">Sorting</a></li>
-                </ul>
-            </p>
--->
             <hr>
             <div>
                 <a class="btn btn-secondary" href="mailto: odbroadrick@gmail.com">
